Latest rubocop configuration

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -41,6 +41,9 @@ Layout/SpaceAroundMethodCallOperator:
 Lint/DeprecatedOpenSSLConstant:
   Enabled: true
 
+Lint/DuplicateElsifCondition:
+  Enabled: true
+
 Lint/MixedRegexpCaptureTypes:
   Enabled: true
 
@@ -74,11 +77,29 @@ RSpec/MessageSpies:
 RSpec/NotToNot:
   EnforcedStyle: to_not
 
+Style/AccessorGrouping:
+  Enabled: true
+
+Style/ArrayCoercion:
+  Enabled: true
+
+Style/BisectedAttrAccessor:
+  Enabled: true
+
+Style/CaseLikeIf:
+  Enabled: true
+
 Style/ExponentialNotation:
   Enabled: false
 
+Style/HashAsLastArrayItem:
+  Enabled: true
+
 Style/HashEachMethods:
   Enabled: false
+
+Style/HashLikeCase:
+  Enabled: true
 
 Style/HashTransformKeys:
   Enabled: false
@@ -112,6 +133,15 @@ Style/MutableConstant:
 
 Style/RaiseArgs:
   Enabled: false
+
+Style/RedundantAssignment:
+  Enabled: true
+
+Style/RedundantFetchBlock:
+  Enabled: true
+
+Style/RedundantFileExtensionInRequire:
+  Enabled: true
 
 Style/RedundantRegexpCharacterClass:
   Enabled: true
