--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,10 +1,14 @@
-require: rubocop-rspec
+require:
+  - rubocop-performance
+  - rubocop-rake
+  - rubocop-rspec
 
 inherit_from:
   - .rubocop.directories.yml
 
 AllCops:
-  TargetRubyVersion: 2.6
+  NewCops: enable
+  TargetRubyVersion: 2.7
 
 Gemspec/DateAssignment:
   Enabled: true
