--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.ref }}
       - uses: ruby/setup-ruby@master
       - name: Install gems
         run: bundle install
