--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.ref }}
+          ref: ${{ github.event.pull_request.head.sha }}
       - uses: ruby/setup-ruby@master
       - name: Install gems
         run: bundle install
