--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -14,7 +14,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event.pull_request.head.sha }}
+          ref: ${{github.event.pull_request.head.ref}}
+          repository: ${{github.event.pull_request.head.repo.full_name}}
       - uses: ruby/setup-ruby@master
       - name: Install gems
         run: bundle install
