--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -14,8 +14,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{github.event.issue.pull_request.head.ref}}
-          repository: ${{github.event.issue.pull_request.head.repo.full_name}}
+          ref: ${{github.event.issue.pull_request.head.sha}}
       - uses: ruby/setup-ruby@master
       - name: Install gems
         run: bundle install
