--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -4,6 +4,9 @@ on:
   issue_comment:
     types: [ created ]
 
+env:
+  PR_REF: ${{ format('refs/heads/{0}', github.event.pull_request.head.ref) }}
+
 jobs:
   integrate:
     name: Integrate
@@ -14,7 +17,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{github.event.issue.pull_request.head.sha}}
+          ref: ${{env.PR_REF}}
+          repository: ${{github.event.issue.pull_request.head.repo.full_name}}
       - uses: ruby/setup-ruby@master
       - name: Install gems
         run: bundle install
