--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -33,5 +33,5 @@ jobs:
         run: bundle exec appraisal rake spec
       - name: Merge PR
         run: |
-          PR_NUM=${PR_URL##*/} --squash
-          gh pr merge $PR_NUM
+          PR_NUM=${PR_URL##*/}
+          gh pr merge $PR_NUM --squash
