--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -35,3 +35,12 @@ jobs:
         run: |
           PR_NUM=${PR_URL##*/}
           gh pr merge $PR_NUM --merge --delete-branch
+      - name: Success feedback
+        if: job.status == 'success'
+        run: |
+          gh api graphql --paginate -f query='
+            mutation {
+              addReaction(input: { clientMutationId: 'integrate.yml', content: THUMBS_UP, subjectId: ${{github.event.comment.id}} }) {
+                clientMutationId
+              }
+            }
