--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           gh api graphql --paginate -f query='
             mutation {
-              addReaction(input: { clientMutationId: 'integrate.yml', content: THUMBS_UP, subjectId: ${github.event.comment.id} }) {
+              addReaction(input: { clientMutationId: "integrate.yml", content: THUMBS_UP, subjectId: ${github.event.comment.id} }) {
                 clientMutationId
               }
             }'
