--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -11,7 +11,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          
       - uses: ruby/setup-ruby@master
+
+      - name: Install gems
+        run: bundle install
 
       - name: Create release
         run: bundle exec rake release
