--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          
+
       - uses: ruby/setup-ruby@master
 
       - name: Install gems
@@ -21,3 +21,4 @@ jobs:
         run: bundle exec rake release
         env:
           GEM_HOST_API_KEY: ${{secrets.RUBYGEMS_API_KEY}}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
