--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -24,4 +24,11 @@ jobs:
           git config user.email "<>"
 
       - name: Create release
-        run: GEM_HOST_API_KEY ${{secrets.RUBYGEMS_API_KEY}} bundle exec rake release         
+        run: |
+          mkdir -p $HOME/.gem
+          touch $HOME/.gem/credentials
+          chmod 0600 $HOME/.gem/credentials
+          printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
+          bundle exec rake release 
+        env: 
+          GEM_HOST_API_KEY: ${{secrets.RUBYGEMS_API_KEY}}       
