--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -25,10 +25,7 @@ jobs:
 
       - name: Create release
         run: |
-          mkdir -p $HOME/.gem
-          touch $HOME/.gem/credentials
-          chmod 0600 $HOME/.gem/credentials
-          printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
-          bundle exec rake release 
+          gem_push=false bundle exec rake release
+          gem push
         env: 
           GEM_HOST_API_KEY: ${{secrets.RUBYGEMS_API_KEY}}       
