--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Create release
         run: |
           gem_push=false bundle exec rake release
+          gem build *.gemspec
           gem push *.gem
         env: 
           GEM_HOST_API_KEY: ${{secrets.RUBYGEMS_API_KEY}}       
