--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -24,9 +24,6 @@ jobs:
           git config user.email "<>"
 
       - name: Create release
-        run: |
-          gem_push=false bundle exec rake release
-          gem build *.gemspec
-          gem push *.gem
+        run: bundle exec rake release
         env: 
           GEM_HOST_API_KEY: ${{secrets.RUBYGEMS_API_KEY}}       
