Drop support for Rails 6.1
- Update development dependencies
- Address rubocop violations

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,9 @@
 require:
   - rubocop-performance
+  - rubocop-rails
   - rubocop-rake
   - rubocop-rspec
+  - rubocop-rspec_rails
 
 inherit_from:
   - .rubocop.directories.yml
@@ -112,6 +114,9 @@ Lint/UnmodifiedReduceAccumulator:
   Enabled: true
 
 Metrics:
+  Enabled: false
+
+Rails/Output:
   Enabled: false
 
 RSpec/AnyInstance:
